--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "stripe": "^14.11.0"
+    "stripe": "^14.11.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
